#####################################################################
## FILE: Makefile.am
# AUTHOR: James Johnson
# CREATE DATE: 2011
# PROJECT: DREME (MEME Suite)
# COPYRIGHT: 2011, UQ
#####################################################################

## Automake uses this file to generate a Makefile

# These files should be included with the distribution.
DATAFILES = centrimo.txt dreme-Klf1.txt site_counts.txt

EXTRA_DIST = $(DATAFILES)
