#####################################################################
## FILE: Makefile.am
# AUTHOR: Shobhit Gupta
# CREATE DATE: 2006
# PROJECT: Meta-MEME
# COPYRIGHT: 2006, UW
#####################################################################

## Automake uses this file to generate a Makefile

# This Makefile builds the scripts used to test the Meta-MEME components.

# These files should be included with the distribution.
DATAFILES = \
  tomtom.out.allr \
  tomtom.out.blic1 \
  tomtom.out.blic5 \
  tomtom.out.ed \
  tomtom.out.kullback \
  tomtom.out.pearson \
  tomtom.out.sandelin \
  tomtom.complete.out.allr \
  tomtom.complete.out.blic1 \
  tomtom.complete.out.blic5 \
  tomtom.complete.out.ed \
  tomtom.complete.out.kullback \
  tomtom.complete.out.pearson \
  tomtom.complete.out.sandelin

EXTRA_DIST = $(DATAFILES)
