#####################################################################
## FILE: Makefile.am
# AUTHOR: James Johnson
# CREATE DATE: 2011
# PROJECT: DREME (MEME Suite)
# COPYRIGHT: 2011, UQ
#####################################################################

## Automake uses this file to generate a Makefile

# These files should be included with the distribution.
DATAFILES = basic.xml norc.xml

EXTRA_DIST = $(DATAFILES)
